Update author name

--- a/play.html
+++ b/play.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Thomas McLean - Directive — Play</title>
+  <title>Alice McLean - Directive — Play</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
   <meta name="viewport" content="width=device-width, user-scalable=no">
-  <meta name="author" content="Thomas McLean">
+  <meta name="author" content="Alice McLean">
   <link rel="stylesheet" href="style.css">
   
   <link rel="stylesheet" href="interpreter/glkote.css" type="text/css">
@@ -60,4 +60,5 @@ outspacing: 0     // gap between windows and edge of gameport
 <div class="interpretercredit"><a href="http://eblong.com/zarf/glulx/quixe/">Quixe for Inform 7 (v. 2.2.1)</a></div>
 </body>
 </html>
+
 
