--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-  <title>Thomas McLean - Directive</title>
+  <title>Alice McLean - Directive</title>
   <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-  <meta name="author" content="Thomas McLean" />
-  <meta name="description" content="A page for the game Directive by Thomas McLean." />
+  <meta name="author" content="Alice McLean" />
+  <meta name="description" content="A page for the game Directive by Alice McLean." />
   <link rel="stylesheet" href="style.css" type="text/css" media="all" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +15,7 @@
 <div class="coverimage"><span><a href="Cover.png"><img src="Small Cover.png" border="1"></a></span></div>
 <div class="introduction">
 	<h1><span>Directive</span></h1>
-	<h2><span>Thomas McLean</span></h2>
+	<h2><span>Alice McLean</span></h2>
 	<div class="bibliography"><span>Release 1</span></div>
 </div>
 <div class="links">
@@ -43,4 +43,5 @@ on your web browser.</p>
 </div>
 </body>
 </html>
+
 
